<resources>
    <string name="app_name">Dapur Segar</string>
    <string name="search_des">Cari buah, sayur, daging ...</string>
    <string name="back_message_on_main">Tekan sekali lagi untuk keluar dari aplikasi</string>
    <string name="pressed_back_message">Press back again to exit</string>
    <string name="default_error_message">Sorry, There is something problem</string>
    <string name="default_connection_error">No internet connection</string>

    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>

    <integer-array name="ic_main_tab">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_bill</item>
        <item>@drawable/ic_favorite</item>
        <item>@drawable/ic_profile</item>
    </integer-array>

    <integer-array name="ic_main_tab_off">
        <item>@drawable/ic_home_off</item>
        <item>@drawable/ic_bill_off</item>
        <item>@drawable/ic_favorite_off</item>
        <item>@drawable/ic_profile_off</item>
    </integer-array>

    <string name="stripe">-</string>

    <!--Text Icon-->
    <string name="ic_arrow_bottom">&#xf35f;</string>
    <string name="ic_sign_right">&#xf125;</string>
    <string name="ic_minus">&#xf208;</string>
    <string name="ic_plus">&#xf217;</string>

    <!--Global-->
    <string name="global_back">Kembali</string>

    <!--Message-->
    <string name="invalid_minimal_input">Minimal %d</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="empty_username">Username tidak boleh kosong</string>
    <string name="empty_password">Password tidak boleh kosong</string>
    <string name="empty_repassword">Password ulang tidak boleh kosong</string>

    <!--Profile-->
    <string name="profile_text_setting">Pengaturan</string>
    <string name="profile_text_support">Bantuan</string>
    <string name="profile_text_terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="profile_text_edit">Ubah</string>

    <!--Favorite-->
    <string name="favorite_title">Favorit</string>

    <!--Bill-->
    <string name="bill_title">Tagihan</string>
    <string name="dummy_bill_product">Pay before 06–06–2019 5:05 p.m. through the BCA bank (automatic check)</string>
    <string name="bill_detail">Detail</string>
    <string name="bill_pay">Pembayaran</string>

    <!--Payment Detail-->
    <string name="payment_detail">Detail Pembayaran</string>
    <string name="payment_detail_not_paid">Belum terbayar</string>
    <string name="payment_detail_not_paid_description">Silakan Bayar sebelum 06–06-2019 5:05 p.m. melalui bank BCA (cek otomatis), jika tidak membayar, pesanan ini akan dibatalkan secara otomatis.</string>
    <string name="payment_detail_product_header">Detil Produk</string>
    <string name="image_description_location">Icon location</string>
    <string name="payment_detail_address_header">Alamat</string>
    <string name="payment_detail_dummy_address">Ds, Sente, desa pikat kecamatan dawan, kabupaten klungkung bali., indonesia 80761</string>
    <string name="payment_detail_bank_name_dummy">Bank BCA</string>
    <string name="payment_detail_no_orders_header">No. Pesanan</string>
    <string name="payment_detail_order_time_header">Waktu pesanan</string>
    <string name="payment_detail_copy">Copy</string>
    <string name="payment_detail_cancel_order">Batal Pesanan</string>
    <string name="payment_detail_total_paying_header">Total paying</string>

    <!--Cart-->
    <string name="cart_title">Keranjang</string>
    <string name="cart_alert_header_message">Masuk atau daftar untuk melanjutkan pesanan Anda</string>
    <string name="cart_alert_notice_message">Dukung petani, dengan memilih produk lokal bersama kami.</string>
    <string name="cart_alert_register_button">Daftar</string>
    <string name="cart_buy">Beli</string>
    <string name="cart_total">Total Harga</string>
    <string name="edit_detail_quantity">Kelipatan</string>

    <string name="detail_product_dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s,</string>
    <string name="detail_product_similar_products">Produk yang terkait</string>
    <string name="dialog_filter_header">Filter</string>
    <string name="detail_product_buy">+ Keranjang</string>
    <string name="loading_message">Mohon Tunggu</string>
    <string name="edit_profile_save">Simpan</string>
    <string name="edit_profile_info_verification">Status Verifikasi</string>
    <string name="edit_profile_email">Email</string>
    <string name="edit_profile_account_status">Status Akun</string>
    <string name="login_login_with">Atau login dengan</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_fogot_password">Lupa password?</string>
    <string name="login_no_account">Tidak punya akun?</string>
    <string name="login_daftar">Daftar</string>
    <string name="login_login_button">Masuk</string>
    <string name="skip_text">Lewati</string>
    <string name="login_welcome_back">Selamat Datang!</string>
    <string name="payment_detail_total_payment">Total Pembayaran</string>
    <string name="register_login">Masuk</string>
    <string name="register_account_is_exist">Sudah mempunyai akun?</string>
    <string name="register_register_title">Daftar</string>
    <string name="items_product_edit_detail">Ubah Detail</string>
    <string name="items_category_more">Lihat Semua</string>

</resources>
