<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.dapursegar.app.base.customview.CustomTextView
                android:id="@+id/tvSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_margin"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:text="@string/skip_text"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.dapursegar.app.base.customview.CustomTextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="45dp"
                android:background="?attr/selectableItemBackground"
                android:text="@string/login_welcome_back"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSkip" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvFacebookLogin"
                style="@style/selectable_with_ripple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="45dp"
                android:layout_marginEnd="@dimen/default_margin_end"
                app:cardCornerRadius="4dp"
                app:cardElevation="9dp"
                app:layout_constraintTop_toBottomOf="@+id/tvWelcome">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_submit"
                    android:background="@color/facebook_blue"
                    android:fontFamily="@font/os_bold"
                    android:gravity="center"
                    android:text="Masuk dengan Facebook"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <com.dapursegar.app.base.customview.CustomTextView
                android:id="@+id/tvOr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/login_login_with"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvFacebookLogin" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUsername"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/default_margin_end"
                app:layout_constraintTop_toBottomOf="@id/tvOr">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_height_edit_text"
                    android:hint="@string/login_hint_username"
                    android:textSize="@dimen/default_edit_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/LoginTextInputLayoutStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="@dimen/default_margin_end"
                app:layout_constraintTop_toBottomOf="@id/tilUsername">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/default_height_edit_text"
                    android:hint="@string/login_hint_password"
                    android:inputType="textPassword"
                    android:textSize="@dimen/default_edit_text_size" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/btnEye"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_eye"
                app:layout_constraintBottom_toBottomOf="@id/tilPassword"
                app:layout_constraintEnd_toEndOf="@id/tilPassword"
                app:layout_constraintTop_toTopOf="@id/tilPassword" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLogin"
                style="@style/selectable_with_ripple"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/default_margin_end"
                app:cardCornerRadius="4dp"
                app:cardElevation="9dp"
                app:layout_constraintTop_toBottomOf="@+id/tilPassword">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_submit"
                    android:background="@color/colorAccent"
                    android:fontFamily="@font/os_bold"
                    android:gravity="center"
                    android:text="@string/login_login_button"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

            </androidx.cardview.widget.CardView>

            <com.dapursegar.app.base.customview.CustomTextView
                android:id="@+id/tvForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:background="?attr/selectableItemBackground"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/login_fogot_password"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvLogin" />

            <com.dapursegar.app.base.customview.CustomTextView
                android:id="@+id/tvAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_start"
                android:layout_marginBottom="24dp"
                android:text="@string/login_no_account"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.dapursegar.app.base.customview.CustomTextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="@dimen/default_margin_end"
                android:text="@string/login_daftar"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/tvAccount"
                app:layout_constraintStart_toEndOf="@id/tvAccount"
                app:layout_constraintTop_toTopOf="@id/tvAccount" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>