<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.dapursegar.app.base.customview.CustomTextView
                android:id="@+id/tvEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/default_padding_end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:padding="2dp"
                android:text="@string/profile_text_edit"
                android:textColor="@color/text_view_black_light"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civUserImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="16dp"
                android:elevation="1dp"
                android:src="@drawable/ic_launcher_background"
                app:civ_border_color="@color/white"
                app:civ_border_overlay="true"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEdit" />

            <com.dapursegar.app.base.customview.CustomTextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="3sp"
                android:text="User Name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@id/civUserImage"
                app:layout_constraintStart_toStartOf="@id/civUserImage"
                app:layout_constraintTop_toBottomOf="@id/civUserImage" />

            <com.dapursegar.app.base.customview.CustomTextView
                android:id="@+id/tvUserId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:lineSpacingExtra="13sp"
                android:text="User ID : T091"
                android:textColor="#646464"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@id/tvUsername"
                app:layout_constraintStart_toStartOf="@id/tvUsername"
                app:layout_constraintTop_toBottomOf="@id/tvUsername" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/tvUserId">

                <RelativeLayout
                    android:id="@+id/rlSetting"
                    style="@style/selectable_with_ripple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/default_padding_start"
                    android:paddingEnd="@dimen/default_padding_end">

                    <ImageView
                        android:id="@+id/ivSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/ic_setting" />

                    <com.dapursegar.app.base.customview.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/ivSetting"
                        android:text="@string/profile_text_setting"
                        android:textColor="@color/text_view_color_gray"
                        android:textSize="12sp" />

                    <com.dapursegar.app.base.customview.CustomTextView
                        android:layout_width="7.4dp"
                        android:layout_height="12dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:text="@string/ic_sign_right"
                        android:textColor="@color/text_view_color_gray"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.6dp"
                        android:layout_below="@id/ivSetting"
                        android:background="@color/transparent_gray" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlSupport"
                    style="@style/selectable_with_ripple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/default_padding_start"
                    android:paddingEnd="@dimen/default_padding_end">

                    <ImageView
                        android:id="@+id/ivSupport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/ic_support" />

                    <com.dapursegar.app.base.customview.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/ivSupport"
                        android:text="@string/profile_text_support"
                        android:textColor="@color/text_view_color_gray"
                        android:textSize="12sp" />

                    <com.dapursegar.app.base.customview.CustomTextView
                        android:layout_width="7.4dp"
                        android:layout_height="12dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:text="@string/ic_sign_right"
                        android:textColor="@color/text_view_color_gray"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="0.6dp"
                        android:layout_below="@id/ivSupport"
                        android:background="@color/transparent_gray" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlTerms"
                    style="@style/selectable_with_ripple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/default_padding_start"
                    android:paddingEnd="@dimen/default_padding_end">

                    <ImageView
                        android:id="@+id/ivTerms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"
                        android:src="@drawable/ic_termncondit" />

                    <com.dapursegar.app.base.customview.CustomTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:layout_toEndOf="@id/ivTerms"
                        android:text="@string/profile_text_terms_conditions"
                        android:textColor="@color/text_view_color_gray"
                        android:textSize="12sp" />

                    <com.dapursegar.app.base.customview.CustomTextView
                        android:layout_width="7.4dp"
                        android:layout_height="12dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="8dp"
                        android:text="@string/ic_sign_right"
                        android:textColor="@color/text_view_color_gray"
                        android:textSize="12sp"
                        android:textStyle="italic" />

                </RelativeLayout>

            </LinearLayout>

            <com.dapursegar.app.base.customview.CustomTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="Version 1.0.1"
                android:textAlignment="center"
                android:textColor="#868686"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>